K8S_Monitoring_Stack_with_Traefik_cert-manager,_Prometheus_&_Grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - grafana.yogifoods.store
      secretName: grafana-tls

  rules:
    - host: grafana.yogifoods.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
