K8S_Monitoring_Stack_with_Traefik_cert-manager,_Prometheus_&_Grafana/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure

  routes:
    - kind: Rule
      match: Host(`grafana.yogifoods.store`)
      services:
        - name: monitoring-grafana
          port: 80

  tls:
    secretName: grafana-tls
